fix spacing

--- a/_sass/blog.sass
+++ b/_sass/blog.sass
@@ -2,7 +2,7 @@
     .posts-container
         display: flex
         flex-wrap: wrap
-        justify-content: space-between
+        justify-content: space-evenly
         margin: 2em 0
         width: 100%
         .post-item
